src/page-modules/contact/ticket-control/ticket-control.module.css
@value typo-body__secondary from "@atb/theme/typography.module.css";

ul {
  padding-left: var(--spacings-large);
}

.feedback {
  composes: typo-body__secondary;
  padding: var(--spacings-small);
  color: var(--static-background-background_0-text);
  outline: 0;
  background: none;
  border-radius: 0.75rem;
  max-width: 100%;
}

.feedback::placeholder {
  color: var(--text-colors-secondary);
  opacity: 1;
}

.feedback:focus-within {
  outline: 0;
  box-shadow: inset 0 0 0 var(--border-width-medium)
    var(--interactive-interactive_2-outline-background);
}

.feedback__error {
  border-color: var(--status-error-primary-background);
}

.feedback_label__error {
  background-color: var(--status-error-primary-background);
  outline: 0;
  padding: var(--spacings-small);
  color: var(--status-error-primary-text);
}

